# esdbclient

./: .coveragerc  .editorconfig  .flake8  .gitignore  Makefile  README.md  TODOS.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  shared.env  test_isolated_asyncio_test_case.py
.github/workflows/: github-actions.yml
esdbclient/: __init__.py  asyncio_client.py  client.py  common.py  connection.py  connection_spec.py  esdbapi.py  esdbapibase.py  events.py  exceptions.py  gossip.py  persistent.py  projections.py  streams.py
esdbclient/instrumentation/opentelemetry/: __init__.py  attributes.py  grpc.py  package.py  spanners.py  utils.py  version.py
esdbclient/protos/Grpc/: cluster_pb2.py  cluster_pb2.pyi  cluster_pb2_grpc.py  code_pb2.py  code_pb2.pyi  gossip_pb2.py  gossip_pb2.pyi  gossip_pb2_grpc.py  persistent_pb2.py  persistent_pb2.pyi  persistent_pb2_grpc.py  projections_pb2.py  projections_pb2.pyi  projections_pb2_grpc.py  shared_pb2.py  shared_pb2.pyi  status_pb2.py  status_pb2.pyi  streams_pb2.py  streams_pb2.pyi  streams_pb2_grpc.py
protos/esdbclient/protos/ClientAPI/: ClientMessageDtos.proto
protos/esdbclient/protos/Grpc/: cluster.proto  code.proto  gossip.proto  monitoring.proto  persistent.proto  projections.proto  redaction.proto  serverfeatures.proto  status.proto  streams.proto
samples/: appending_events.py  persistent_subscriptions.go.py  persistent_subscriptions.py  quickstart.py  reading_events.py  server_side_filtering.py  subscribing_to_stream.py  website_snippets.py
tests/: test_asyncio_client.py  test_client.py  test_docs.py  test_events.py  test_instrumentation.py  test_persistent_subscription.py  test_samples.py
